--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -204,14 +204,7 @@
 		
 	</div>
 	<div class="ctas">
-		<div class="panel">
-			<h3>Cut Harmful Electrical Noise with Correct VFD Cabling Practices</h3>
-			<div class="panel-body">
-				<img style="margin: auto; width: 100px; display: block;" src="http://info.belden.com/hs-fs/hub/282305/file-1449955804-jpg/IND-CTA/VFDCablingPractices_LumbergWashdownWP_CTA.jpg">
-				<p>Learn the challenges with VFD installations and how to select the right cable for VFD motor connections.</p>
-				<p><a id="vfd" style="padding: 8px 0px; border-radius: 3px; width: 100%; text-align: center; color: rgb(255, 255, 255); float: left; background-color: rgb(84, 84, 84);" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank">Download Now</a></p>
-			</div>
-		</div>
+			<a id="vfd" href="http://info.belden.com/cwp-vfd-cabling-practices-lp-bc" target="_blank"><img src="/docs/images2/images/VFD-CTA.jpg" style="width: 205px; margin-bottom: 15px;"></a><br>
 		<div class="panel">
 			<h3>Wire & Cable<br />Catalog</h3>
 			<div class="panel-body">
