--- a/INCA Pages/Copper-Cable.html
+++ b/INCA Pages/Copper-Cable.html
@@ -172,7 +172,7 @@ table th[class*="col-"] {
 </style>
 </head>
 <div class="breadcrumbs">
-		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Ethernet / Copper Cable</p>
+		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / <a href="http://www.belden.com/products/industrialcable/ethernet-cables/index.cfm">Ethernet Cables</a> / Copper Cable</p>
 </div>
 <div class="hero">
 	<h1>Copper Ethernet Cabling Solutions</h1>
