--- a/INCA Pages/Audio-Control.html
+++ b/INCA Pages/Audio-Control.html
@@ -37,7 +37,7 @@
 	}
 	.hero {
 		width: 100%;
-		height: 278px;
+		height: 310px;
 		padding: 25px 15px 0px 15px;;
 		background-color: #BDC3C7;
 		border-top: 2px solid #e7e7e7;
@@ -172,14 +172,14 @@ table th[class*="col-"] {
 </style>
 </head>
 <div class="breadcrumbs">
-		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electronic Wire & Cable / Audio, Control & Instrumentation</p>
+		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electrical Wire &amp; Cable / Audio, Control &amp; Instrumentation</p>
 </div>
 <div class="hero">
-	<h1>Audio, Control & Instrumentation</h1>
+	<h1>Audio, Control &amp; Instrumentation</h1>
 	<div class="image"><img src="/docs/images2/images/Copper-Cables.png" style=" height: 235px; margin: auto; display: block;"></div>
 	<div class="text">
-		<p>Belden’s flagship “Classics” electronic  audio, control and instrumentation cables have been specified for decades for their unmatched ability to ensure system uptime. Backed by a 10-year warranty, these rugged essentials will outlast alternatives even in the most demanding harsh environments.</p>
-		<p>Be certain that your cable can perform reliably when flexed, routed near electrical noise sources, installed in extreme hot or cold conditions, or exposed to water, sun, chemicals, and solvents. Choose Belden for your cabling needs.</p>
+		<p>Belden's flagship "Classics" electronic audio, control and instrumentation cables have been specified for decades for their unmatched ability to ensure system uptime. Backed by a 10-year warranty, these rugged essentials will outlast alternatives even in the most demanding harsh environments.</p>
+		<p>Be certain that your cable can perform reliably when flexed, routed near electrical noise sources, installed in extreme hot or cold conditions, or exposed to water, sun, chemicals, and solvents.</p>
 		<br>
 		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/copper-ethernet-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Products/Category_41345" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
 	</div>
@@ -189,110 +189,55 @@ table th[class*="col-"] {
 		<div class="page-header">
 			<h2>Product Applications</h2>
 		</div>
-    <p style="color: #165db0; font-size: 16px;"><strong>Today's network productivity requires seamless communication in diverse and demanding applications:</strong></p>
-		<div style="float: left; width: 320px; height: 100px; display: block; margin-left: 20px;">
-        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>On-machine and robotic applications<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Peripheral devices to PLC controllers</br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>PLCs to networking devices</p>
+    <p style="color: #165db0; font-size: 16px;"><strong>A portfolio engineered for performance demands in a diverse array of applications:</strong></p>
+		<div style="float: left; width: 340px; height: 100px; display: block; margin-left: 20px;">
+        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>On-machine<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In control cabinet or panel<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In riser or plenum spaces, indoors or outdoors</p>
 		</div>
-		<div style="float: left; width: 350px; height: 100px; display: block;">
-				<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>Enterprise systems to industrial computers<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Backbone and uplink ports<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Outdoor and Underground Links</p>
+		<div style="float: left; width: 305px; height: 100px; display: block;">
+				<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>In wire harnesses and cable assemblies<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>For audio, communication, security and alarm systems<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>For low-voltage power supply</p>
 		</div>
 		<div class="page-header">
-				<h2>Product Specifications</h2>
+				<h2>Product Features &amp; Benefits</h2>
 		</div>
-			<p style="color: #165db0; font-size: 16px;"><strong>Belden's comprehensive line of DataTuff industrial Ethernet cables are specifically designed for the unique challenges of mission-critical applications in harsh environments:</strong></p><br />
-			<table class="table table-striped table-bordered">
-				<thead>
-					<tr>
-						<th>Feature</th>
-						<th>Options/Description</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th scope="row"><strong>Flexibility:</strong></th>
-						<td>From permanent install up to 10m flex</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Jackets Options:</strong></th>
-						<td>Industrial-grade PVC, TPE, FEP, LSZH</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Insulation Options:</strong></th>
-						<td>Polyolefin or FEP</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Shielding Options:</strong></th>
-						<td>Overall Beldfoil, Tinned Copper Braid</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Conductors & Stranding:</strong></th>
-						<td>Solid or Stranded Bare Copper, Solid or Stranded Tinned Copper</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Data Rates:</strong></th>
-						<td>10/100Mb/s, 1Gb/s, 10Gb/s</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Special Options Available</strong></th>
-						<td>Heavy / upjacketed or armored constructions<br />Burial, CMX-Outdoor options<br />Extreme high and low temperature ratings available<br />600V, TC-Rated, PLTC-Rated<br />600V AWM rated for motor control centers</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Connectivity</strong></th>
-						<td>IP20 & IP67 connectors and cordsets</td>
-					</tr>
-				</tbody>
-			</table>
-			<br />
+			<p style="color: #165db0; font-size: 16px;"><strong>Features and options that allow engineers to match cable selection with environmental conditions and application demands:</strong></p><br>
+			<p><strong>Flexibility:</strong> Solid conductors for fixed installations; stranded conductors for moderate flexing, frequent distribution, maintenance.</p>
+			<p><strong>High and Low Temperature:</strong> PVC jacket for  -20&#8451; to 80&#8451;; Fluorocoplymer jacket for -20&#8451; to 150&#8451;; FEP for -70&#8451; to 200&#8451;.</p>
+			<p><strong>Electrical Noise (EMI/RFI) Exposure:</strong> Beldfoil shield for high frequency noise, foil + braid shield for low frequency noise.</p>
+			<p><strong>Plenum or Riser Spaces:</strong> CM or CMG for general installation; CMR for riser spaces; CMP for plenum spaces.</p>
+			<p><strong>Limited Cabling Space:</strong> FEP insulation and jacketing for 20% reduced overall diameter and minimum small bend radius. AWG sizes #24 through #12.</p>
+			<p><strong>Extended Distance Runs:</strong> PE or PO conductor insulations for optimized capacitance and long runs.</p>
+			<p><strong>Oil, Acid, Hydrocarbon, Alcohol, Chemical Exposure:</strong> Myriad jacketing options like FEP or PUR for specific exposure resistance.</p>
+			<p><strong>Direct Burial or Abrasion/Rodent Risk:</strong> Optional Aluminum interlock armoring on any electronic cable.</p>
+			<br>
 		<div class="page-header">
-				<h2>Environments</h2>
+				<h2>Product Ratings</h2>
 		</div>
-			<p style="color: #165db0; font-size: 16px;"><strong>Be certain with the installable performance of DataTuff cables even under the most extreme conditions:</strong></p>
-			<div style="float: left; width: 320px; display: block; margin-left: 20px;">
-	        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>Abrasion and crush resistance<br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Weldsplatter resistance</br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Oil, sunlight, gasoline, and chemical<br />resistance<br />
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Temperature rating variations from extreme cold to extreme heat</br></p>
-			</div>
-			<div style="float: left; width: 350px; height: 100px; display: block;">
-					<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>EMI/RFI (electromagnetic interference or radio frequency interference) protection<br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>MSHA mining approval<br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Animal exposure and rodent protection</p>
-			</div>
-			<br />
+			<p style="color: #165db0; font-size: 16px;"><strong>Approvals, ratings and performance testing to ensure longevity and regulatory compliance:</strong></p>
+			<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>NEC Ratings for building installation types: CM, CMG, CMR, CMP<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>NFPA79 for OEM Machinery; NFPA70 for Buildings<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>AWM Specifications for Appliance Wiring<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Flame Ratings</p>
 	</div>
 	<div class="ctas">
 		<div class="panel">
-			<h3>Wire & Cable<br />Catalog</h3>
+			<h3>Wire &amp; Cable<br>Catalog</h3>
 			<div class="panel-body">
-				<p>Download the Wire & Cable Product Catalog for in-depth product information. View the entire portfolio and technical product information.</p>
+				<p>Download the Wire &amp; Cable Product Catalog for in-depth product information. View the entire portfolio and technical product information.</p>
 				<p><a style="float: left; color:#fff; text-align:center; background-color:#545454; padding:8px 0px; border-radius:3px; width: 100%;" target="_blank" href="http://www.belden.com/docs/upload/Cabling-Solutions-for-Industrial-Applications.pdf">Download My Catalog</a></p>
 			</div>
 		</div>
 		<div class="panel">
-			<h3>Copper Ethernet<br />Product Bulletins</h3>
+			<h3>Classic's Resources</h3>
 			<div class="panel-body">
 				<ul>
-				<li><a href="https://www.belden.com/docs/upload/PB231.pdf" target="_blank">Industrial Ethernet</a></li>
-					<li><a href="http://www.belden.com/products/industrialnetworking/managedswitches/upload/DATATUFF-CAT-5E-PROFINET-CABLES_PB00034_INCA_BDC_0715_A_AG-LO_Original_79476.pdf" target="_blank">CAT 5E PROFINET Cable</a></li>
-					<li><a href="https://www.belden.com/docs/upload/NP314.pdf" target="_blank">DataTuff Cat 5e 600V AWM-rated Cables</a></li>
-					<li><a href="https://www.belden.com/resourcecenter/documents/upload/PB341_CC-Link_IE_Field_Networks.pdf" target="_blank">DataTuff for CC-Link IE Field Networks</a></li>
-					<li><a href="https://www.belden.com/docs/upload/CB0021_Continuous_Armor_Cable_Option.pdf" target="_blank">Continuous Aluminum Armor</a></li>
-					<li><a href="https://www.belden.com/docs/upload/CB006-2.pdf" target="_blank">Bonded-Pair Technology</a></li>
+				<li><a href="https://www.belden.com/docs/upload/cb0017.pdf" target="_blank">Classics Selection Guide</a></li>
+					<li><a href="http://www.belden.com/resourcecenter/tools/cablefinder/upload/02-2_29.pdf" target="_blank">Cable Finder Guide</a></li>
+					<li><a href="http://www.belden.com/resourcecenter/tools/conduit-calculator.cfm" target="_blank">Conduit Capacity Calculator</a></li>
 				</ul>
-			</div>
-		</div>
-		<div class="panel">
-			<h3>Copper Ethernet<br />Resources</h3>
-			<div class="panel-body">
-				<ul>
-				<li><a href="http://www.belden.com/products/industrialcable/ethernet-cable-procurement-specs.cfm" target="_blank">Procurement Specifications</a></li>
-				<li><a href="https://www.belden.com/docs/upload/End_User_Guide-End_User_Guide.pdf" target="_blank">Industrial Ethernet User Guide</a></li>
-				<li><a href="http://www.belden.com/resourcecenter/documents/upload/Industrial_Ethernet_Cable_Solutions_Brochure.pdf" target="_blank">Industrial Ethernet Cable Solutions</a></li>
-			</ul>
 			</div>
 		</div>
 	</div>
