--- a/INCA Pages/Audio-Control.html
+++ b/INCA Pages/Audio-Control.html
@@ -172,13 +172,13 @@ table th[class*="col-"] {
 </style>
 </head>
 <div class="breadcrumbs">
-		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electronic Wire & Cable / Audio, Control & Instrumentation</p>
+		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electrical Wire & Cable / Audio, Control & Instrumentation</p>
 </div>
 <div class="hero">
 	<h1>Audio, Control & Instrumentation</h1>
 	<div class="image"><img src="/docs/images2/images/Copper-Cables.png" style=" height: 235px; margin: auto; display: block;"></div>
 	<div class="text">
-		<p>Belden’s flagship “Classics” electronic  audio, control and instrumentation cables have been specified for decades for their unmatched ability to ensure system uptime. Backed by a 10-year warranty, these rugged essentials will outlast alternatives even in the most demanding harsh environments.</p>
+		<p>Belden's flagship "Classics" electronic  audio, control and instrumentation cables have been specified for decades for their unmatched ability to ensure system uptime. Backed by a 10-year warranty, these rugged essentials will outlast alternatives even in the most demanding harsh environments.</p>
 		<p>Be certain that your cable can perform reliably when flexed, routed near electrical noise sources, installed in extreme hot or cold conditions, or exposed to water, sun, chemicals, and solvents. Choose Belden for your cabling needs.</p>
 		<br>
 		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/copper-ethernet-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Products/Category_41345" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
@@ -189,63 +189,30 @@ table th[class*="col-"] {
 		<div class="page-header">
 			<h2>Product Applications</h2>
 		</div>
-    <p style="color: #165db0; font-size: 16px;"><strong>Today's network productivity requires seamless communication in diverse and demanding applications:</strong></p>
+    <p style="color: #165db0; font-size: 16px;"><strong>A portfolio engineered for performance demands in a diverse array of applications:</strong></p>
 		<div style="float: left; width: 320px; height: 100px; display: block; margin-left: 20px;">
-        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>On-machine and robotic applications<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Peripheral devices to PLC controllers</br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>PLCs to networking devices</p>
+        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>On-machine<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In control cabinet or panel</br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In riser or plenum spaces, indoors or outdoors</p>
 		</div>
 		<div style="float: left; width: 350px; height: 100px; display: block;">
-				<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>Enterprise systems to industrial computers<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Backbone and uplink ports<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Outdoor and Underground Links</p>
+				<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>In wire harnesses and cable assemblies<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>For audio, communication, security and alarm systems<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>For low-voltage power supply</p>
 		</div>
 		<div class="page-header">
-				<h2>Product Specifications</h2>
+				<h2>Product Features & Benefits</h2>
 		</div>
-			<p style="color: #165db0; font-size: 16px;"><strong>Belden's comprehensive line of DataTuff industrial Ethernet cables are specifically designed for the unique challenges of mission-critical applications in harsh environments:</strong></p><br />
-			<table class="table table-striped table-bordered">
-				<thead>
-					<tr>
-						<th>Feature</th>
-						<th>Options/Description</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th scope="row"><strong>Flexibility:</strong></th>
-						<td>From permanent install up to 10m flex</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Jackets Options:</strong></th>
-						<td>Industrial-grade PVC, TPE, FEP, LSZH</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Insulation Options:</strong></th>
-						<td>Polyolefin or FEP</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Shielding Options:</strong></th>
-						<td>Overall Beldfoil, Tinned Copper Braid</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Conductors & Stranding:</strong></th>
-						<td>Solid or Stranded Bare Copper, Solid or Stranded Tinned Copper</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Data Rates:</strong></th>
-						<td>10/100Mb/s, 1Gb/s, 10Gb/s</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Special Options Available</strong></th>
-						<td>Heavy / upjacketed or armored constructions<br />Burial, CMX-Outdoor options<br />Extreme high and low temperature ratings available<br />600V, TC-Rated, PLTC-Rated<br />600V AWM rated for motor control centers</td>
-					</tr>
-					<tr>
-						<th scope="row"><strong>Connectivity</strong></th>
-						<td>IP20 & IP67 connectors and cordsets</td>
-					</tr>
-				</tbody>
-			</table>
+			<p style="color: #165db0; font-size: 16px;"><strong>Features and options that allow engineers to match cable selection with environmental conditions and application demands:</strong></p><br />
+			<p><strong>Flexibility:</strong> Solid conductors for fixed installations; stranded conductors for moderate flexing, frequent distribution, maintenance.</p>
+			<p><strong>High and Low Temperature:</strong> PVC jacket for  -20°C to 80°C; Fluorocoplymer jacket for -20°C to 150°C; FEP for -70°C to 200°C.</p>
+			<p><strong>Electrical Noise (EMI/RFI) Exposure:</strong> Beldfoil shield for high frequency noise, foil + braid shield for low frequency noise.</p>
+			<p><strong>Plenum or Riser Spaces:</strong> CM or CMG for general installation; CMR for riser spaces; CMP for plenum spaces.</p>
+			<p><strong>Limited Cabling Space:</strong> FEP insulation and jacketing for 20% reduced overall diameter and minimum small bend radius. AWG sizes #24 through #12.</p>
+			<p><strong>Extended Distance Runs:</strong> PE or PO conductor insulations for optimized capacitance and long runs.</p>
+			<p><strong>Oil, Acid, Hydrocarbon, Alcohol, Chemical Exposure:</strong> Myriad jacketing options like FEP or PUR for specific exposure resistance.</p>
+			<p><strong>Direct Burial or Abrasion/Rodent Risk:</strong> Optional Aluminum interlock armoring on any electronic cable.</p>
+
 			<br />
 		<div class="page-header">
 				<h2>Environments</h2>
