--- a/INCA Pages/High-Flex-VFD.html
+++ b/INCA Pages/High-Flex-VFD.html
@@ -59,6 +59,16 @@
 	.hero .text p {
 		font-size: 16px;
 	}
+	.feature-box {
+		width: 960px;
+		padding: 20px 0px;
+		background-color: #264A64;
+	}
+	.feature-box p {
+		color: #fff;
+		text-align: center;
+		font-size: 16px;
+	}
 	.content {
 		width: 100%;
 		margin-top: 20px;
@@ -207,6 +217,43 @@ position: static;
 display: table-cell;
 float: none;
 }
+.media {
+  margin: 0px 100px;
+}
+.media:first-child {
+  margin-top: 0;
+}
+.media,
+.media-body {
+  overflow: hidden;
+  zoom: 1;
+}
+.media-body {
+  width: 10000px;
+}
+.media-object {
+  display: block;
+}
+.media-object.img-thumbnail {
+  max-width: none;
+}
+.media-left,
+.media > .pull-left {
+  padding-right: 10px;
+}
+.media-left,
+.media-right,
+.media-body {
+  display: table-cell;
+  vertical-align: middle;
+}
+.media-middle {
+  vertical-align: middle;
+}
+.media-heading {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
 </style>
 </head>
 <div class="breadcrumbs">
@@ -219,6 +266,16 @@ float: none;
 		<p>Transmit the power you need to run your industrial machine motors, no matter the environment. Belden's new series of UL-rated, extra flexible VFD cables provides supremely pliable, flexible constructions for use on-machines (16-8 AWG) and increases the ease of installation without sacrificing any crucial elements needed for true VFD constructions.</p>
 		<br>
 		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/vfd-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Categories/Category_41311" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
+	</div>
+</div>
+<div class="feature-box">	
+	<div class="media"> 
+		<div class="media-left media-middle"> 
+			<a href="#"> <img class="media-object" alt="64x64" src="/docs/images2/images/VFD-CTA.png" data-holder-rendered="true" style="width: 70px;"> </a> 
+		</div> 
+		<div class="media-body">  
+			<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p> 
+		</div> 
 	</div>
 </div>
 <div class="content">
