--- a/INCA Pages/PROFINET.html
+++ b/INCA Pages/PROFINET.html
@@ -47,8 +47,7 @@
 		float: left;
 		width: 245px;
 		height: 182px;
-		margin-top: 30px;
-		margin-left: -15px;
+		margin-top: 15px;
 	}
 	.hero .text {
 		float: left;
@@ -214,7 +213,7 @@ float: none;
 </div>
 <div class="hero">
 	<h1>PROFINET Cable Solutions</h1>
-	<div class="image"><img src="/docs/images2/images/High-Flex-VFD-Cable.png" style="width: 250px; margin: auto; display: block;"></div>
+	<div class="image"><img src="/docs/images2/images/PROFINET.png" style="width: 120px; margin: auto; display: block;"></div>
 	<div class="text">
 		<p>Maximize uptime in the most demanding application environments with PROFINET cables from Belden. PROFINET cables provide Ethernet connectivity using open standard technology to easily connect devices across all systems for efficient factory automation.</p>
 		<br>
@@ -229,17 +228,17 @@ float: none;
 		</div>
 		<div class="callout">
 			<p><i class="fa fa-check-square-o"></i> <strong>Flexible</strong></p>
-			<div class="copy"><p>Three cable designs with ranges of flexibility, with up to 10 million flex cycles for continuous movement and on-machine applications.</p>
+			<div class="copy"><p>Three cable options with ranges of flexibility, ruggedized with UL ratings, and allowing up to 5 million flexes.</p>
 			</div>
 		</div>
 		<div class="callout">
 			<p><i class="fa fa-check-square-o"></i> <strong>Easy to install and use</strong></p>
-			<div class="copy"><p>Finely stranded tinned copper conductors, with some constructions having over 2,000 individual strands, and a flexible TPE jacket make these cables supremely pliable for ease of handling during installation.</p>
+			<div class="copy"><p>Cat 5e quad design compatible with Siemens Fast Connect connectors and Belden’s entire PROFINET portfolio.</p>
 			</div>
 		</div>
 		<div class="callout">
 			<p><i class="fa fa-check-square-o"></i> <strong>Withstand harsh conditions of VFD </strong></p>
-			<div class="copy"><p>Engineered for optimum electrical performance and physical toughness, going well beyond minimum specifications in order to handle the challenges of VFD applications, as well as a full range of UL ratings for application versatility.</p>
+			<div class="copy"><p>UL standards, including CMX Outdoor and PLTC, allow cabling to be used in Class I Div II hazardous areas, as well as outdoors, maximizing uptime even in harsh environments.</p>
 			</div>
 		</div>
 		<br>
@@ -251,7 +250,7 @@ float: none;
 				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Batch processes (fine/specialty chemicals) and continuous processes (bulk chemicals)<br>
 				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Pumping Station Control (water/wastewater)<br>
 				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Filling, packaging, and labeling applications (consumer products)<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Machine tooling</p>	
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Machine tooling</p>
 			<div class="page-header">
 					<h2>Product Specifications</h2>
 			</div>
