--- a/INCA Pages/PROFINET.html
+++ b/INCA Pages/PROFINET.html
@@ -237,7 +237,7 @@ float: none;
 			</div>
 		</div>
 		<div class="callout">
-			<p><i class="fa fa-check-square-o"></i> <strong>Withstand harsh conditions of VFD </strong></p>
+			<p><i class="fa fa-check-square-o"></i> <strong>Withstand harsh conditions</strong></p>
 			<div class="copy"><p>UL standards, including CMX Outdoor and PLTC, allow cabling to be used in Class I Div II hazardous areas, as well as outdoors, maximizing uptime even in harsh environments.</p>
 			</div>
 		</div>
