--- a/INCA Pages/High-Flex-VFD.html
+++ b/INCA Pages/High-Flex-VFD.html
@@ -268,14 +268,14 @@ float: none;
 		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/vfd-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Categories/Category_41311" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
 	</div>
 </div>
-<div class="feature-box">	
-	<div class="media"> 
-		<div class="media-left media-middle"> 
-			<a href="#"> <img class="media-object" alt="64x64" src="/docs/images2/images/VFD-CTA.png" data-holder-rendered="true" style="width: 70px;"> </a> 
-		</div> 
-		<div class="media-body">  
-			<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p> 
-		</div> 
+<div class="feature-box">
+	<div class="media">
+		<div class="media-left media-middle">
+			<a href="#"> <img class="media-object" alt="64x64" src="/docs/images2/images/VFD-CTA.png" data-holder-rendered="true" style="width: 70px;"> </a>
+		</div>
+		<div class="media-body">
+			<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+		</div>
 	</div>
 </div>
 <div class="content">
@@ -294,7 +294,7 @@ float: none;
 			</div>
 		</div>
 		<div class="callout">
-			<p><i class="fa fa-check-square-o"></i> <strong>Withstand harsh conditions of VFD </strong></p>
+			<p><i class="fa fa-check-square-o"></i> <strong>Withstand harsh conditions of VFD environments</strong></p>
 			<div class="copy"><p>Engineered for optimum electrical performance and physical toughness, going well beyond minimum specifications in order to handle the challenges of VFD applications, as well as a full range of UL ratings for application versatility.</p>
 			</div>
 		</div>
