--- a/INCA Pages/VFD.html
+++ b/INCA Pages/VFD.html
@@ -143,6 +143,58 @@
 	margin-right: 20px;
 	margin-left: 20px;
 }
+.feature-box {
+	width: 960px;
+	padding: 20px 0px;
+	background-color: #264A64;
+}
+.feature-box p {
+	color: #fff;
+	text-align: center;
+	font-size: 16px;
+	padding-bottom: 0px;
+}
+.feature-box a {
+	color: #fff;
+	text-decoration: underline;
+}
+.media {
+  margin: 0px 100px;
+}
+.media:first-child {
+  margin-top: 0;
+}
+.media,
+.media-body {
+  overflow: hidden;
+  zoom: 1;
+}
+.media-body {
+  width: 10000px;
+}
+.media-object {
+  display: block;
+}
+.media-object.img-thumbnail {
+  max-width: none;
+}
+.media-left,
+.media > .pull-left {
+  padding-right: 10px;
+}
+.media-left,
+.media-right,
+.media-body {
+  display: table-cell;
+  vertical-align: middle;
+}
+.media-middle {
+  vertical-align: middle;
+}
+.media-heading {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
 </style>
 </head>
 <div class="breadcrumbs">
@@ -156,6 +208,13 @@
 		<p>As the original developer of high quality VFD cable, Belden provides superior electrical performance and reliability, even in the most demanding industrial environments.</p>
 		<br>
 		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/vfd-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Categories/Category_41311" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
+	</div>
+</div>
+<div class="feature-box">	
+	<div class="media"> 
+		<div class="media-body">  
+			<p>Explore our most flexible line of VFD cables, in Extra Flexible & Continuous Flex designs.<br>View the <a href="http://www.belden.com/products/industrialcable/high-flex-vfd-cable.cfm">High Flex VFD solutions</a></p> 
+		</div> 
 	</div>
 </div>
 <div class="content">
