--- a/INCA Pages/Electrical-Wire-Home.html
+++ b/INCA Pages/Electrical-Wire-Home.html
@@ -110,45 +110,45 @@
 }
 </style>
 <div class="breadcrumbs">
-		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electrical Wire & Cable</p>
+		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electronic Wire & Cable</p>
 </div>
 <div class="hero">
 	<div class="text">
-		<h1>Electrical Wire & Cable</h1><br>
+		<h1>Electronic Wire & Cable</h1><br>
 		<p>In this age of high-efficiency production and processing, thousands of dollars worth of automation and monitoring  devices and equipment rely on robust cabling solutions in order to work properly.  To ensure reliable performance of such equipment, Belden goes beyond UL specifications to deliver cabling optimized for electrical performance and physical toughness.</p>
 		<p>Don't let cabling be the weak link in your system; connect  controllers, I/Os, terminal blocks, and devices with Belden Electronic Wire & Cable.</p>
 	</div>
 </div>
 <div class="content">
 	<div class="features">
-		<h2 style="text-align: center;">Electrical Wire & Cable by Category</h2><br>
+		<h2 style="text-align: center;">Electronic Wire & Cable by Category</h2><br>
 		<div class="products">
 		    <div class="thumbnail">
-		      <img src="/docs/images2/images/EAGLE1.png" alt="EAGLE One">
+		      <img src="/docs/images2/images/Audo-Control.png" alt="Audio Control">
 		      <div class="caption">
-		        <h3>Audio, Control & Instrumentation</h3>
-		        <p><a href="#" class="btn btn-primary" role="button">View Products</a></p>
+		        <h3>Multi-Pair/Multi-Conductor Cable</h3>
+		        <p><a href="http://www.belden.com/products/industrialcable/electronic-wire/multi-conductor-cable.cfm" class="btn btn-primary" role="button">View Products</a></p>
 		      </div>
 		    </div>
 		    <div class="thumbnail">
-		      <img src="/docs/images2/images/EAGLE2030.png" alt="EAGLE 20/30">
+		      <img src="/docs/images2/images/Lead-Wire_1.png" alt="Lead Wire">
 		      <div class="caption">
-		        <h3>Lead<br>Wire</h3>
-		        <p><a href="#" class="btn btn-primary" role="button">View Products</a></p>
+		        <h3>Hook Up<br>& Lead Wire</h3>
+		        <p><a href="http://www.belden.com/products/industrialcable/electronic-wire/hook-up-wire.cfm" class="btn btn-primary" role="button">View Products</a></p>
 		      </div>
 		    </div>
 		    <div class="thumbnail">
-		      <img src="/docs/images2/images/Xenon.png" alt="Xenon">
+		      <img src="/docs/images2/images/MachFlex_1.png" alt="MachFlex">
 		      <div class="caption">
 		        <h3>MachFlex<br>Data & Vision</h3>
-		        <p><a href="#" class="btn btn-primary" role="button">View Products</a></p>
+		        <p><a href="http://www.belden.com/products/industrialcable/electronic-wire/machflex.cfm" class="btn btn-primary" role="button">View Products</a></p>
 		      </div>
 		    </div>
 				<div class="thumbnail">
-		      <img src="/docs/images2/images/Xenon.png" alt="Xenon">
+		      <img src="/docs/images2/images/Portable.png" alt="Portable Cordage">
 		      <div class="caption">
 		        <h3>Portable<br>Cordage</h3>
-		        <p><a href="#" class="btn btn-primary" role="button">View Products</a></p>
+		        <p><a href="http://www.belden.com/products/industrialcable/electronic-wire/portable-cordage.cfm" class="btn btn-primary" role="button">View Products</a></p>
 		      </div>
 		    </div>
 		</div>
