--- a/INCA Pages/Lead-Wire.html
+++ b/INCA Pages/Lead-Wire.html
@@ -45,9 +45,10 @@
 	}
 	.hero .image {
 		float: left;
-		width: 215px;
-		height: 235px;
-		margin-top: 15px;
+    width: 215px;
+    height: 174px;
+		margin-top: 66px;
+		margin-left: -15px;
 	}
 	.hero .text {
 		float: left;
@@ -172,16 +173,16 @@ table th[class*="col-"] {
 </style>
 </head>
 <div class="breadcrumbs">
-		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / Electrical Wire &amp; Cable / Lead Wire</p>
+		<p><strong>You Are Here:</strong> <a href="http://www.belden.com/products/">Products</a> / <a href="http://www.belden.com/products/industrialcable/index.cfm">Industrial Cable</a> / <a href="http://www.belden.com/products/industrialcable/electronic-wire/index.cfm">Electronic Wire &amp; Cable</a> / Hook Up & Lead Wire</p>
 </div>
 <div class="hero">
-	<h1>Lead Wire</h1>
-	<div class="image"><img src="/docs/images2/images/Copper-Cables.png" style=" height: 235px; margin: auto; display: block;"></div>
+	<h1>Hook Up & Lead Wire</h1>
+	<div class="image"><img src="/docs/images2/images/Lead-Wire.png" style="width: 250px; margin: auto; display: block;"></div>
 	<div class="text">
 		<p>Rubber and plastic insulated single conductor hook-up and lead wire products are designed for reliable and consistent performance. For your quality assurance needs, these components are built to comply with rigid industry and government specifications.</p>
-    <p>In lead wire manufacturing, Belden controls the entire process –turning process copper rod into tinned copper wire strands and mixing plastic and formulating rubber for conductor insulations. You can trust that you are getting consistently top quality wire.</p>
+    <p>In lead wire manufacturing, Belden controls the entire process turning process copper rod into tinned copper wire strands and mixing plastic and formulating rubber for conductor insulations. You can trust that you are getting consistently top quality wire.</p>
 		<br>
-		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/copper-ethernet-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a> <a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#00933B; padding:8px 30px; border-radius:3px;" href="http://belden.catalog.belden.com/en/Home/Products/Category_41345" target="_blank"><i class="fa fa-cog" style="padding-right:10px;"></i>View In Our Online Catalog</a></p>
+		<p><a style="float: left; margin-right:30px;color:#fff; text-align:center; background-color:#004990; padding:8px 30px; border-radius:3px;" href="http://info.belden.com/inca/classics-request-call" target="_blank"><i class="fa fa-comments-o" style="padding-right:10px;"></i>Speak To An Expert</a></p>
 	</div>
 </div>
 <div class="content">
@@ -189,79 +190,93 @@ table th[class*="col-"] {
 		<div class="page-header">
 			<h2>Product Applications</h2>
 		</div>
-    <p style="color: #165db0; font-size: 16px;"><strong>Today's network productivity requires seamless communication in diverse and demanding applications:</strong></p>
-		<div style="float: left; width: 320px; height: 100px; display: block; margin-left: 20px;">
-        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>On-machine and robotic applications<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Peripheral devices to PLC controllers</br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>PLCs to networking devices</p>
-		</div>
-		<div style="float: left; width: 350px; height: 100px; display: block;">
-				<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>Enterprise systems to industrial computers<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Backbone and uplink ports<br>
-				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Outdoor and Underground Links</p>
-		</div>
+    <p style="color: #165db0; font-size: 16px;"><strong>A portfolio engineered for performance demands in a diverse array of applications:</strong></p>
+        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>On-machine and internal machine wiring<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In control cabinet or panel</br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In wire harnesses and cable assemblies<br>
+				<i class="fa fa-check-square-o" style="padding-right:10px;"></i>In appliances</p>
 		<div class="page-header">
 				<h2>Product Specifications</h2>
 		</div>
-			<p style="color: #165db0; font-size: 16px;"><strong>Belden's comprehensive line of DataTuff industrial Ethernet cables are specifically designed for the unique challenges of mission-critical applications in harsh environments:</strong></p><br />
+			<p style="color: #165db0; font-size: 16px;"><strong>Features and options that allow engineers to match cable selection with environmental conditions and application demands</strong></p><br />
 			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
-						<th>Feature</th>
-						<th>Options/Description</th>
+						<th>Insulation Material</th>
+						<th>Voltage Options</th>
+						<th>AWG Sizes</th>
+						<th>Max Temp</th>
+						<th>AWM Options</th>
+						<th>Ratings/Properties</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<th scope="row"><strong>Flexibility:</strong></th>
-						<td>From permanent install up to 10m flex</td>
+						<td>PVC</td>
+						<td>300V, 600V, 1000V</td>
+						<td>#30 to #8</td>
+						<td>80&#8451;, 105&#8451;, 24 hr brake cycle @ 149&#8451;</td>
+						<td>1007, 1015, 1028, 1061, 1230, 1283, 1569, MIL-Specs</td>
+						<td>Oxidation, Sun, Flame, Acid, Alkali</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Jackets Options:</strong></th>
-						<td>Industrial-grade PVC, TPE, FEP, LSZH</td>
+						<td>GreenChoice PPO</td>
+						<td>600V</td>
+						<td>#28 to #10</td>
+						<td>105&#8451;</td>
+						<td>11028</td>
+						<td>Abrasion, Cold Temp (-40&#8451;), LSZH</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Insulation Options:</strong></th>
-						<td>Polyolefin or FEP</td>
+						<td>TFE</td>
+						<td>250V, 600V</td>
+						<td>#30 to #16</td>
+						<td>200&#8451;</td>
+						<td>1180, 1213, 1271, MIL-Specs</td>
+						<td>Oil, Abrasion, Sun,Water, Flame, Acid, Alkali</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Shielding Options:</strong></th>
-						<td>Overall Beldfoil, Tinned Copper Braid</td>
+						<td>EPDM</td>
+						<td>600V, 7500V</td>
+						<td>#22 to #4/0</td>
+						<td>125&#8451;, 150&#8451;, 24 hr brake cycle @ 149&#8451;</td>
+						<td>3340, 3374, 3484, 3499</td>
+						<td>Low Temp Flex, Sun, Water, Acid, Alkali</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Conductors & Stranding:</strong></th>
-						<td>Solid or Stranded Bare Copper, Solid or Stranded Tinned Copper</td>
+						<td>XL-DUR</td>
+						<td>300V, 600V</td>
+						<td>#22 to #6</td>
+						<td>105&#8451;, 125&#8451;, 150&#8451; 24 hr brake cycle @ 149&#8451;</td>
+						<td>3173, 3195, 3196, 3199, 3321, 3436, Type SIS</td>
+						<td>Thermal aging, moisture, solvent</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Data Rates:</strong></th>
-						<td>10/100Mb/s, 1Gb/s, 10Gb/s</td>
+						<td>CSPE</td>
+						<td>300V, 5000V</td>
+						<td>#22 to #4/0</td>
+						<td>105&#8451;, 24 hr brake cycle @ 149&#8451;</td>
+						<td>3190, 3191, 3192, 3193</td>
+						<td>Flex, Sun, Water, Acid, Alkali, Nuclear Radiation</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Special Options Available</strong></th>
-						<td>Heavy / upjacketed or armored constructions<br />Burial, CMX-Outdoor options<br />Extreme high and low temperature ratings available<br />600V, TC-Rated, PLTC-Rated<br />600V AWM rated for motor control centers</td>
+						<td>Neoprene</td>
+						<td>300V, 600V</td>
+						<td>#20 to #2</td>
+						<td>90&#8451;, 24 hr brake cycle @ 149&#8451;</td>
+						<td>3044, 3046, 3048</td>
+						<td>Abrasion, Water, Aliphatic Hydrocarbons</td>
 					</tr>
 					<tr>
-						<th scope="row"><strong>Connectivity</strong></th>
-						<td>IP20 & IP67 connectors and cordsets</td>
+						<td>Silicone Rubber</td>
+						<td>600V</td>
+						<td>#22 to #4/0</td>
+						<td>150&#8451;, 200&#8451;, 24 hr brake cycle @ 149&#8451;</td>
+						<td>3069, 3070, 3071, 3074, 3075, 3101, 3123 (Mercury Switch), 3125, 3126, 3135, 3212, 3213, 3214</td>
+						<td>Heat, Low Temp Flex, Sun, Nuclear Radiation</td>
 					</tr>
 				</tbody>
 			</table>
-			<br />
-		<div class="page-header">
-				<h2>Environments</h2>
-		</div>
-			<p style="color: #165db0; font-size: 16px;"><strong>Be certain with the installable performance of DataTuff cables even under the most extreme conditions:</strong></p>
-			<div style="float: left; width: 320px; display: block; margin-left: 20px;">
-	        <p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>Abrasion and crush resistance<br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Weldsplatter resistance</br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Oil, sunlight, gasoline, and chemical<br />resistance<br />
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Temperature rating variations from extreme cold to extreme heat</br></p>
-			</div>
-			<div style="float: left; width: 350px; height: 100px; display: block;">
-					<p><i class="fa fa-check-square-o" style="padding-right:10px;"></i>EMI/RFI (electromagnetic interference or radio frequency interference) protection<br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>MSHA mining approval<br>
-					<i class="fa fa-check-square-o" style="padding-right:10px;"></i>Animal exposure and rodent protection</p>
-			</div>
 			<br />
 	</div>
 	<div class="ctas">
@@ -273,25 +288,13 @@ table th[class*="col-"] {
 			</div>
 		</div>
 		<div class="panel">
-			<h3>Copper Ethernet<br />Product Bulletins</h3>
+			<h3>Hook Up Wire<br />Resources</h3>
 			<div class="panel-body">
 				<ul>
-				<li><a href="https://www.belden.com/docs/upload/PB231.pdf" target="_blank">Industrial Ethernet</a></li>
-					<li><a href="http://www.belden.com/products/industrialnetworking/managedswitches/upload/DATATUFF-CAT-5E-PROFINET-CABLES_PB00034_INCA_BDC_0715_A_AG-LO_Original_79476.pdf" target="_blank">CAT 5E PROFINET Cable</a></li>
-					<li><a href="https://www.belden.com/docs/upload/NP314.pdf" target="_blank">DataTuff Cat 5e 600V AWM-rated Cables</a></li>
-					<li><a href="https://www.belden.com/resourcecenter/documents/upload/PB341_CC-Link_IE_Field_Networks.pdf" target="_blank">DataTuff for CC-Link IE Field Networks</a></li>
-					<li><a href="https://www.belden.com/docs/upload/CB0021_Continuous_Armor_Cable_Option.pdf" target="_blank">Continuous Aluminum Armor</a></li>
-					<li><a href="https://www.belden.com/docs/upload/CB006-2.pdf" target="_blank">Bonded-Pair Technology</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="panel">
-			<h3>Copper Ethernet<br />Resources</h3>
-			<div class="panel-body">
-				<ul>
-				<li><a href="http://www.belden.com/products/industrialcable/ethernet-cable-procurement-specs.cfm" target="_blank">Procurement Specifications</a></li>
-				<li><a href="https://www.belden.com/docs/upload/End_User_Guide-End_User_Guide.pdf" target="_blank">Industrial Ethernet User Guide</a></li>
-				<li><a href="http://www.belden.com/resourcecenter/documents/upload/Industrial_Ethernet_Cable_Solutions_Brochure.pdf" target="_blank">Industrial Ethernet Cable Solutions</a></li>
+				<li><a href="http://www.belden.com/docs/upload/Cabling-Solutions-for-Industrial-Applications.pdf#page=152" target="_blank">Lead Wire Technical Data</a></li>
+				<li><a href="http://www.belden.com/resourcecenter/tools/conduit-calculator.cfm" target="_blank">Conduit Capacity Calculator</a></li>
+				<li><a href="http://www.belden.com/docs/upload/TechColor.htm" target="_blank">Color Options</a></li>
+				<li><a href="http://www.belden.com/docs/upload/np325.pdf" target="_blank">GreenChoice Hook Up Wire</a></li>
 			</ul>
 			</div>
 		</div>
